RESOLVED FIXED49942
[Qt] Fix compilation with !ENABLE(INSPECTOR)
https://bugs.webkit.org/show_bug.cgi?id=49942
Summary [Qt] Fix compilation with !ENABLE(INSPECTOR)
Laszlo Gombos
Reported 2010-11-22 15:18:05 PST
Following r71981 this is a build fix for QtWebKit. Note that there was some work for WebKit2 regarding this configuration (r72091, r72092).
Attachments
proposed patch (4.11 KB, patch)
2010-11-22 15:24 PST, Laszlo Gombos
no flags
Laszlo Gombos
Comment 1 2010-11-22 15:24:41 PST
Created attachment 74604 [details] proposed patch Goal was to minimize the number of guards at this time to help maintenance. This does not address WebKit2 configuration for QtWebKit.
WebKit Commit Bot
Comment 2 2010-11-23 06:06:48 PST
The commit-queue encountered the following flaky tests while processing attachment 74604 [details]: fast/profiler/throw-exception-from-eval.html fast/workers/storage/use-same-database-in-page-and-workers.html Please file bugs against the tests. These tests were authored by dumi@chromium.org, kmccullough@apple.com, oliver@apple.com, and timothy@apple.com. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3 2010-11-23 07:31:40 PST
The commit-queue encountered the following flaky tests while processing attachment 74604 [details]: http/tests/loading/basic-auth-resend-wrong-credentials.html Please file bugs against the tests. These tests were authored by beidson@apple.com. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2010-11-23 07:33:42 PST
Comment on attachment 74604 [details] proposed patch Clearing flags on attachment: 74604 Committed r72606: <http://trac.webkit.org/changeset/72606>
WebKit Commit Bot
Comment 5 2010-11-23 07:33:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.