2010-11-23  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix compilation with !ENABLE(INSPECTOR)
        https://bugs.webkit.org/show_bug.cgi?id=49942

        Add ENABLE(INSPECTOR) to the Qt specific files following r71981.

        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::InspectorClientQt::inspectorDestroyed):
        (WebCore::InspectorClientQt::openInspectorFrontend):
        (WebCore::InspectorClientQt::sendMessageToFrontend):
        * WebCoreSupport/InspectorServerQt.cpp:
        (WebCore::InspectorServerRequestHandlerQt::webSocketReadyRead):

Canonical link: https://commits.webkit.org/63067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72606 268f45cc-cd09-0410-ab3c-d52691b4dbfc