WebKit/qt/WebCoreSupport/InspectorClientQt.cpp
@@ -125,6 +125,7 @@ InspectorClientQt::InspectorClientQt(QWebPage* page)
 
 void InspectorClientQt::inspectorDestroyed()
 {
+#if ENABLE(INSPECTOR)
     if (m_frontendClient)
         m_frontendClient->inspectorClientDestroyed();
 
@@ -133,11 +134,13 @@ void InspectorClientQt::inspectorDestroyed()
         webInspectorServer->unregisterClient(this);
 
     delete this;
+#endif
 }
 
     
 void InspectorClientQt::openInspectorFrontend(WebCore::InspectorController* inspectorController)
 {
+#if ENABLE(INSPECTOR)
 #if USE(V8)
     ensureDebuggerScriptLoaded();
 #endif
@@ -174,6 +177,7 @@ void InspectorClientQt::openInspectorFrontend(WebCore::InspectorController* insp
     m_frontendClient = new InspectorFrontendClientQt(m_inspectedWebPage, inspectorView, this);
     inspectorView->page()->d->page->inspectorController()->setInspectorFrontendClient(m_frontendClient);
     m_frontendWebPage = inspectorPage;
+#endif
 }
 
 void InspectorClientQt::releaseFrontendPage()
@@ -255,6 +259,7 @@ void InspectorClientQt::storeSetting(const String& key, const String& setting)
 
 bool InspectorClientQt::sendMessageToFrontend(const String& message)
 {
+#if ENABLE(INSPECTOR)
     if (m_inspectedWebPage->d->inspector->d->remoteFrontend) {
         RemoteFrontendChannel* session = qobject_cast<RemoteFrontendChannel*>(m_inspectedWebPage->d->inspector->d->remoteFrontend);
         if (session)
@@ -266,6 +271,9 @@ bool InspectorClientQt::sendMessageToFrontend(const String& message)
 
     Page* frontendPage = QWebPagePrivate::core(m_frontendWebPage);
     return doDispatchMessageOnFrontendPage(frontendPage, message);
+#else
+    return false;
+#endif
 }
 
 static String variantToSetting(const QVariant& qvariant)
@@ -291,6 +299,7 @@ static QVariant settingToVariant(const String& setting)
     return retVal;
 }
 
+#if ENABLE(INSPECTOR)
 InspectorFrontendClientQt::InspectorFrontendClientQt(QWebPage* inspectedWebPage, PassOwnPtr<QWebView> inspectorView, InspectorClientQt* inspectorClient)
     : InspectorFrontendClientLocal(inspectedWebPage->d->page->inspectorController(), inspectorView->page()->d->page) 
     , m_inspectedWebPage(inspectedWebPage)
@@ -397,7 +406,7 @@ void InspectorFrontendClientQt::inspectorClientDestroyed()
     m_inspectorClient = 0;
     m_inspectedWebPage = 0;
 }
-
+#endif
 }
 
 #include "InspectorClientQt.moc"
